--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -5,8 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "TestingValue": {
-    "searchString": "ma"
-  },
+  "searchString": "ma",
   "AllowedHosts": "*"
 }
