--- a/CRUDExample/CRUDExample.csproj
+++ b/CRUDExample/CRUDExample.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SampleDataToSeed\" />
+  </ItemGroup>
+
 </Project>
