--- a/CRUDExample/appsettings.json
+++ b/CRUDExample/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PersonsDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "EPPlus": {
+    "ExcelPackage": {
+      "LicenseContext": "Noncommercial"
+    }
   }
 }
