--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="EPPlus" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
