Added IPersonsRepository, ICountriesRepository to Program.Cs File

--- a/CRUDExample/CRUDExample.csproj
+++ b/CRUDExample/CRUDExample.csproj
@@ -23,12 +23,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Repositories\Repositories.csproj" />
     <ProjectReference Include="..\ServiceContracts\ServiceContracts.csproj" />
     <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
-		<InternalsVisibleTo Include="Tests"/>
+		<InternalsVisibleTo Include="Tests" />
 	</ItemGroup>
 
 </Project>
